# minimal-ecash-sender

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
minimal_ecash_sender/: __init__.py  cli.py  core.py
